I added the .gitignore file

--- a/welcome.html
+++ b/welcome.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -11,14 +11,15 @@
     <a href= "http://codeup.com">go to codeup</a>
 
     <table>
-        <th>qb</th>
-        <th>rb</th>
-        <th>wr</th>
-
         <tr>
-        <td>dak</td>
-        <td>zeke</td>
-        <td>dez</td>
+            <th>qb</th>
+            <th>rb</th>
+            <th>wr</th>
+        </tr>
+        <tr>
+            <td>dak</td>
+            <td>zeke</td>
+            <td>dez</td>
         </tr>
     </table>
 
@@ -27,4 +28,72 @@
 
 
 </body>
+</html> -->
+
+
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Tables</title>
+    </head>
+    <body>
+        <a id="top"></a>
+        <h1>Welcome to Veridian Dynamics!</h1>
+
+        <p>
+            At Veridian Dynamics, <strong>we</strong> solve<em> your</em> problems with <strong><em>technology.</em></strong>
+        </p>
+
+        <hr>
+
+        <h2>Core Values</h2>
+        <ul>
+            <li>Competence</li>
+            <li>Involvement</li>
+            <li>Technology</li>
+        </ul>
+        <h2>Our Process</h2>
+        <ol>
+            <li>Plan</li>
+            <li>Evaluate</li>
+            <li>Implement</li>
+        </ol>
+        <h2>2020 Vision</h2>
+        <ul>
+            <li>Become #1 in Technology</li>
+            <li>Increase Success by 20%</li>
+            <li>Increase Business by 30%</li>
+        </ul>
+
+        <hr>
+
+        <h2>Company Vision</h2>
+        <img style="width: 50%" src="img/girl_looking_awayyyyy.jpeg" alt="pic of girl looking away">
+        <h2>Our Product</h2>
+        <table>
+            <tr>
+                <th>Plan</th>
+                <th>Price</th>
+                <th>Features</th>
+            </tr>
+            <tr>
+                <td>Starter</td>
+                <td>$99</td>
+                <td>Base Technology</td>
+            </tr>
+            <tr>
+                <td>Advanced</td>
+                <td>$199</td>
+                <td>Additional Features</td>
+            </tr>
+            <tr>
+                <td>Premium</td>
+                <td>$499</td>
+                <td>Unlimited Support</td>
+            </tr>
+        </table>
+        <p><em>All products come with our quality guarantee<sup>tm</sup></em></p>
+        <a href=#top><strong>Go to the top of the page</strong>
+    </body>
 </html>
