--- a/forms.html
+++ b/forms.html
@@ -8,26 +8,26 @@
             <h1>login page</h1>
             <div>
                     <form action="https://requestb.in/zxz76azx" method="POST">
-                        <label for="email">
-                         Email:
-                        <input type="text" id="email" name="email" placeholder="enter your email">
-                        </label>
+                    <label for="email">
+                    Email:
+                    <input type="text" id="email" name="email" placeholder="enter your email">
+                    </label>
                     <br>
             </div>
             <div>
                     <label for="password">
                     Password:
-                    <input type="hidden" id="password" name="password" placeholder="enter your password">
+                    <input type="password" text="hidden" id="password" name="password" placeholder="enter your password">
                     </label>
                     <br>
             </div>
-             <div>
-                <label for="username">
-                     Username:
+            <div>
+                    <label for="username">
+                    Username:
                     </label>
-                     <input type="text" id="username" name="username" placeholder="enter your username">
-                     <br>
-             </div>
+                    <input type="text" id="username" name="username" placeholder="enter your username">
+                    <br>
+            </div>
             <div>
                  <button submit="login">enter the matrix</button>
              </div>
