--- a/hello_world.html
+++ b/hello_world.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="eng">
+	<head>
+		<meta charset="utf-8">
+		<title>My first website</title>
+	</head>
+	<body>
 
-<head>
-	<title>My first website</title>
-</head>
-
-<body>
-
-</body>
-	
+	</body>
 </html>
