box model exercise from 10/2/17

--- a/box_model_exercise.html
+++ b/box_model_exercise.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <title>The Box Model</title>
     <link rel="stylesheet" href="css/box_model_stylesheet.css">
-        <h1>Visible Spectrum Wavelengths</h1>
 </head>
     <body>
+        <h1><a href="https://wikipedia.com" target="_blank">Visible Spectrum Wavelengths</a></h1>
+
             <div class="box" id="first_box">620-750 nm</div>
             <div class="box" id="second_box">590-620nm</div>
             <div class="box" id="third_box">570-590 nm</div>
             <div class="box" id="fourth_box">495-570 nm</div>
             <div class="box" id="fifth_box">450-495 nm</div>
             <div class="box" id="sixth_box">380-450 nm</div>
-
     </body>
 </html>
