--- a/box_model_exercise.html
+++ b/box_model_exercise.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/box_model_stylesheet.css">
 </head>
     <body>
-        <h1><a href="https://wikipedia.com" target="_blank">Visible Spectrum Wavelengths</a></h1>
+        <h1><a href="https://www.wikipedia.org" target="_blank">Visible Spectrum Wavelengths</a></h1>
 
             <div class="box" id="first_box">620-750 nm</div>
             <div class="box" id="second_box">590-620nm</div>
