cleaned up code, added extra form with radio buttons etc

--- a/order-pizza.html
+++ b/order-pizza.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
 
-    <!--#1JUMBOTRON-->
+<!--#1JUMBOTRON-->
 
     <div class="jumbotron">
         <div id="container">
@@ -48,11 +48,11 @@
         </div>
     </div>
     <h2>Build your own pizza!</h2>
-    <ul class="nav nav-tabs">
-        <li role="presentation" class="active"><a href="#"><span class="badge">1</span> Size and Crust</a></li>
-        <li role="presentation"><a href="#"><span class="badge">2</span> Cheese and Sauce</a></li>
-        <li role="presentation"><a href="#"><span class="badge">3</span> Toppings</a></li>
-    </ul>
+        <ul class="nav nav-tabs">
+            <li role="presentation" class="active"><a href="#"><span class="badge">1</span> Size and Crust</a></li>
+            <li role="presentation"><a href="#"><span class="badge">2</span> Cheese and Sauce</a></li>
+            <li role="presentation"><a href="#"><span class="badge">3</span> Toppings</a></li>
+        </ul>
     <div class="panel panel-info">
         <div class="panel-heading">
             Choose size and crust
@@ -117,7 +117,7 @@
         </div>
     </div>
 
-    <!--------#2choose cheese & sauce--------->
+<!--------#2choose cheese & sauce--------->
 
     <div class="panel panel-info">
         <div class="panel-heading">Choose cheese and sauce</div>
@@ -174,7 +174,7 @@
         </div>
     </div>
 
-    <!---------#3choose toppings--------->
+<!---------#3choose toppings--------->
 
     <div class="panel panel-info">
         <div class="panel-heading">Choose toppings</div>
@@ -268,3 +268,128 @@
 <script src="js/bootstrap.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--------#2choose cheese & sauce
+
+<div class="panel panel-info">
+    <div class="panel-heading">Choose cheese and sauce</div>
+    <div class="panel-body">
+        <div class="panel panel-default">
+            <div class="panel-heading">Cheese?</div>
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-info">
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+                            Small (10")
+                        </label>
+                    </div>
+                </li>
+                <li class="list-group-item list-group-item-info">
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+                            Medium (12")
+                        </label>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">Sauce?</div>
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-info">
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+                            Medium (12")
+                        </label>
+                    </div>
+                </li>
+
+                <li class="list-group-item list-group-item-info">
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+                            Medium (14")
+                        </label>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="panel-footer">
+        <div class="text-right">
+            <div class="btn-group" role="group" aria-label="two buttons">
+                <button type="button" class="btn btn-primary" aria-label="Right Align">
+                    <span class="glyphicon glyphicon-triangle-left" ></span>Go Back
+                </button>
+                <button type="button" class="btn btn-primary" aria-label="Right Align">Next Step
+                    <span class="glyphicon glyphicon-triangle-right" ></span>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+-->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
