all new files/exercises

--- a/order-pizza.html
+++ b/order-pizza.html
@@ -33,8 +33,11 @@
                     <button type="submit" class="btn btn-default">Search stores near you</button>
                 </form>
                 <ul class="nav navbar-nav navbar-right">
-                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span>Sign Up
-                    <li><a href="#"></a>Sign Up</li>
+                    <li><a href="#">
+                        <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
+                        Sign Up
+                    </a></li>
+                    </li>
                 </ul>
             </div>
         </div>
