--- a/training2.html
+++ b/training2.html
@@ -42,23 +42,38 @@
     </div>
     <br>
     <div class="row">
-        <div class="col-sm-3 color"></div>
-        <div class="col-sm-3 color"></div>
-        <div class="col-sm-3 color"></div>
-        <div class="col-sm-3 color"></div>
+        <div class="col-sm-6 color"></div>
+        <div class="col-sm-6 color"></div>
     </div>
 
     <br>
     <div class="row">
-        <div class="col-sm-6 mmcolor"></div>
-        <div class="col-sm-6 mmcolor"></div>
+        <div class="col-sm-4 mcolor"></div>
+        <div class="col-sm-4 mcolor"></div>
+        <div class="col-sm-4 mcolor"></div>
     </div>
     <br>
     <div class="row">
-        <div class="col-sm-6 mmcolor"></div>
-        <div class="col-sm-6 mmcolor"></div>
+        <div class="col-sm-3 mmcolor"></div>
+        <div class="col-sm-3 mmcolor"></div>
+        <div class="col-sm-3 mmcolor"></div>
+        <div class="col-sm-3 mmcolor"></div>
     </div>
-
+    <div class="row">
+        <div class="col-sm- mmmcolor"></div>
+        <div class="col-sm-1/5 mmmcolor"></div>
+        <div class="col-sm-1/5 mmmcolor"></div>
+        <div class="col-sm-1/5 mmmcolor"></div>
+        <div class="col-sm-1/5 mmcolor"></div>
+        <div class="col-sm-1/5 mmcolor"></div>
+        <div class="col-sm-1/5 mmcolor"></div>
+        <div class="col-sm-1/5 mmcolor"></div>
+    </div>
+    <div class="row">
+        <div class="col-sm-3 mmcolor"></div>
+        <div class="col-sm-6 mmcolor"></div>
+        <div class="col-sm-1/5 mmcolor"></div>
+        <div class="col-sm-1/5 mmcolor"></div>
 </div>
 </main>
 <script src="http://code.jquery.com/jquery-2.2.4.min.js"></script>
