--- a/grid-layout.html
+++ b/grid-layout.html
@@ -1,50 +1,48 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Grid Layout Exercise</title>
     <link rel="stylesheet" href="grid-layout.css">
-    <title>Grind Layout Exercise</title>
+    <title>Grid Layout</title>
 </head>
-    <body>
-
-        <main class="container">
-
-            <div class="row1">
-                <div class="one-half">
-                    <h2>1/2</h2>         <!-- 1/2 -->
-                </div>
-            </div>
-
-            <div class="row3">
-                <div class="one-third">
-                    <h2>1/3</h2>         <!-- 1/3 -->
-                </div>
-            </div>
-
-            <div class="row3">
-                <div class="one-fourth">
-                    <h2>1/4</h2>         <!-- 1/4 -->
-                </div>
-            </div>
-
-        </main>
-    </body>
-</html>
-
-
-
-
-
-<!-- Grid NOTES & SYNTAX----------------------------------------------
-
-<main class="container">
+<body>
     <div class="row">
-        <div class="col-1 box">
-            <h1>ROW 1</h1>
-        </div>
+        <div class="one-half">1/2</div>
+        <div class="one-half">1/2</div>
+    </div>
+
+    <br>
+    <div class="row">
+        <div class="one-third">1/3</div>
+        <div class="one-third">1/3</div>
+        <div class="one-third">1/3</div>
+    </div>
+    <div class="row">
+        <div class="one-fourth">1/4</div>
+        <div class="one-fourth">1/4</div>
+        <div class="one-fourth">1/4</div>
+        <div class="one-fourth">1/4</div>
+    </div>
+    <div class="row">
+        <div class="one-eighth">1/8</div>
+        <div class="one-eighth">1/8</div>
+        <div class="one-eighth">1/8</div>
+        <div class="one-eighth">1/8</div>
+        <div class="one-eighth">1/8</div>
+        <div class="one-eighth">1/8</div>
+        <div class="one-eighth">1/8</div>
+        <div class="one-eighth">1/8</div>
+    </div>
+    <div class="row">
+        <div class="one-fourth">1/4</div>
+        <div class="one-half">1/2</div>
+        <div class="one-eighth">1/8</div>
+        <div class="one-eighth">1/8</div>
     </div>
 </main>
-
--------------------------------------------------------------------->
+</body>
+</html>
