--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -30,268 +30,358 @@
         "use strict";
     });
 
-
-
 //Class Selectors exercise====================>
-//
-//    //1.
-//    $('li').css('border', '1px solid black');
-//    $('li').css('background', 'grey');
-//
-//    //2.===================
-//    var element = $('h1, #id');
-//    alert(element);
-////or-->
-//    var element2 = $('div, #id, .ze-div');
-//    alert(element2);
-////or-->
-//    var contents = $('paragraph').html();
-//    alert(contents);
 
+    //1.
+    $('li').css('border', '1px solid black');
+    $('li').css('background', 'grey');
 
-//    //3.===================
-//
-//
-//    //4.===================
-
+    //2.===================
+    var element = $('h1, #id');
+    alert(element);
+//or-->
+    var element2 = $('div, #id, .ze-div');
+    alert(element2);
+//or-->
+    var contents = $('paragraph').html();
+    alert(contents);
 
 
 //Class Selectors exercise====================>
 
-//    //1.===================
-//        $('.codeup').css('border', '2px outset red');
-//        $('li').first().css({
-//            'background': 'gold',
-//            'border': '2px solid black'
-//            });
-//        $('ul, li').css('font-size', '20px');
-//
-//    //2.===================
-//
-//        var statement = $('.code').css('')
-//
+    //1.===================
+        $('.codeup').css('border', '2px outset red');
+        $('li').first().css({
+            'background': 'gold',
+            'border': '2px solid black'
+            });
+        $('ul, li').css('font-size', '20px');
+
+    //2.===================
 
 
-    //================================================================================================================
-
-    //click============================
-//    function handleParagraphClick() {
-//        var style = $('')
-//    }
-//
-//
-//
-//        $('p').click(handleParagraphClick);
-//        alert('you clicked the p');
-//
-//
-//        $('h2').click(function() {
-//            alert('You double clicked an h2')
-//        })
-//
 
 
-//    //hover============================
-//    function startHover() {
-//        alert('you stopped hovering')
-//
-//    }
-//
-//
-//
-//
-//    function stopHover() {
-//        alert('you stopped hovering')
-//    }
-//
-//    $('h1').hover(startHover, stopHover);
+//================================================================================================================
+////click============================
 
+        function handleParagraphClick() {
+          var style = $('')
+        }
+
+        $('p').click(handleParagraphClick);
+        alert('you clicked the p');
+
+        $('h2').click(function() {
+            alert('You double clicked an h2')
+        })
+
+
+////hover============================
+
+        function stopHover() {
+          alert('you stopped hovering')
+        }
+
+        $('h1').hover(startHover, stopHover);
 
 
 //mouse events jquery exercise ========================================================
-//
-//    function onParagraphClick() {
-//        this.style.backgroundColor = 'gold';
-//    }
-//
-//    $('h1').click(onParagraphClick);
-//
-//
-//
-//
-//
-//
-//
-//    function increaseParaSize() {
-//        this.style.text = '18px';
-//    }
-//
-//    $('p').dblclick(increaseParaSize());
-//
-//
+
+        function onParagraphClick() {
+          this.style.backgroundColor = 'gold';
+        }
+
+        $('h1').click(onParagraphClick);
+
+
+        function increaseParaSize() {
+          this.style.text = '18px';
+        }
+
+        $('p').dblclick(increaseParaSize());
+
+
 
 //------------------>
 
 
-//    $('p').dblclick(function() {
-//                var theElementThatWasClicked = this;
-//                theElementThatWasClicked.style.backgroundColor = 'yellow';
-//            });
-//
-    //----------->
+        $('p').dblclick(function() {
+            var theElementThatWasClicked = this;
+            theElementThatWasClicked.style.backgroundColor = 'yellow';
+        });
+
+//------------------>
 
 
-            function startHover() {
-                this.style.font ='red';
-            }
+        function startHover() {
+            this.style.font ='red';
+        }
 
-            function stopHover() {
-                this.style.font ='black';
-            }
+        function stopHover() {
+            this.style.font ='black';
+        }
 
-            $('li').hover(startHover, stopHover)
+        $('li').hover(startHover, stopHover);
 
-//Click events walk through===>
+
+//Click events walk through=================================================>
     // ###################
     // # Exercise Review #
     // ###################
 
-    // Add jQuery code that will change the background color of a h1 element
-    // when clicked.
 
-    // when an h1 is clicked
+  //1. Add jQuery code that will change the background color of a h1 element when clicked.
+
     $('h1').click(function() {
-        // change the background color
         $('h1').css('background-color', 'firebrick');
+    });
+
+
+
+  //2. Make all paragraphs have a font size of 18px when they are double clicked.
+
+    $('p').dblclick(function() {
+        // change the font size to 18px
+        // this.style.fontSize = '28px';
+        // this.css('font-size', '28px'); // DONT DO THIS
+        $(this).css('font-size', '28px');
     })
 
-    // Make all paragraphs have a font size of 18px when they are double
-    // clicked.
 
-    // when a paragraph is double clicked
-//    $('p').dblclick(function() {
-//        // change the font size to 18px
-//        // this.style.fontSize = '28px';
-//        // this.css('font-size', '28px'); // DONT DO THIS
-//        $(this).css('font-size', '28px');
-//    })
+  //3. Set all li text color to red when the mouse is hovering, reset to black when it's not.
+
+    // When I hover over an li change the font color to red
+
+    // When I stop hovering change the font color to black
+
+    $('li').hover(function() {
+        $(this).css('color', '#f00');
+    },
+        function() {
+        $(this).css('color', 'black');
+    });
 
 
-    $('li').css('font-size', '40px');
-    $()
 
-    // Set all li text color to red when the mouse is hovering, reset to black
-    // when it is not.
+//Exercise==========================================================================>
 
-    // when I hover over an li
-    // change the font color to red
-    // when I stop hovering
-    // change the font color to black
+  //1.
+    $('h1').click(function() {
+        $('h1').css('background-color, firebrick');
+    });
+
+
+//-------------------------------------->
+  //2.
+    $('p').dblclick(function() {
+        this.style.fontSize = '28px';
+    //or-->
+        $(this).css('font-size', '28px');
+    });
+
+
+//-------------------------------------->
+  //3.
     $('li').hover(function() {
         $(this).css('color', '#f00');
     }, function() {
         $(this).css('color', 'black');
+    });
+
+
+
+
+
+
+
+
+//JQUERY Event listners=============================================================================
+
+// Adding an event listener to a single element with an id
+        function onParagraphClick() {
+            this.style.backgroundColor = 'yellow';
+        };
+
+
+// Vanilla JS event listener--->
+        var paragraph = document.getElementById('codeup');
+        paragraph.addEventListener('click', onParagraphClick);
+
+
+// jQuery event listener--->
+      $('#codeup').click(onParagraphClick);
+
+
+// Add an event listener to multiple elements
+
+        function handleParagraphClick() {
+            var theElementThatWasClicked = this;
+            theElementThatWasClicked.style.backgroundColor = 'yellow';
+        }
+
+         // Vanilla JS
+         var paragraphs = document.getElementsByTagName('p');
+         for (var i = 0; i < paragraphs.length; i++) {
+             paragraphs[i].addEventListener('click', handleParagraphClick);
+         };
+
+         // jQuery
+         $('p').click(handleParagraphClick);
+
+
+//
+         $('h2').dblclick(function() {
+             alert('You double clicked an h2!');
+             var theElementThatWasClicked = this;
+             theElementThatWasClicked.style.backgroundColor = 'yellow';
+         });
+
+
+// Hover=============================================>
+
+        // two callback functions, begin hovering, when we stop hovering
+
+        function startHover() {
+            alert('you started hovering')
+        }
+
+        function stopHover() {
+            alert('you stopped hovering')
+        }
+
+        $('h1').hover(startHover, stopHover);
+
+        // Summary
+         $(selector).click(eventHandlerFunction)
+
+//
+//######################################--more-jQuery-code--#####################################
+
+//Toggle====>
+
+    $('#toggle').click(function(e) {
+        $('dd').toggleClass('invisible');
     })
+    //or-->
+    $('#toggle').click(function(e) {
+        e.preventDefault();
+        $('dd').toggleClass('invisible');
+    });
 
 
+//Makes dt's yellow====>
+
+    $('dt').click(function(e) {
+        $(e.target).css('background-color', 'yellow');
+    });
 
 
+    $('dd').click(function(e) {
+        $(e.target).css({'border': '2px dashed red',
+            'font-size': '30px'
+        });
+    });
+
+    $('h1').click(function(e) {
+        $(e.target).css('color', 'grey');
+    });
+
+//Selector code====>
+
+    $('dt').dblclick(function(e) {
+        $(e.target).css('background-color', 'white');
+    });
 
 
-//    //--------------------------------------
-//    //1.
-//    $('h1').click(function() {
-//        $('h1').css('background-color, firebrick');
-//    });
-//
-//
-//    //--------------------------------------
-//    //2.
-//    $('p').dblclick(function() {
-//        this.style.fontSize = '28px';
-//    //or-->
-//        $(this).css('font-size', '28px');
-//    });
-//
-//
-//    //--------------------------------------
-//    //3.
-//    $('li').hover(function() {
-//        $(this).css('color', '#f00');
-//    }, function() {
-//        $(this).css('color', 'black');
-//    });
-//
-//
+    $('dt').dblclick(function(e) {
+        $(e.target).css('background-color', 'white');
+    });
 
 
+//Keypress Code====>
+
+    $(document).keyup(function(event) {
+        console.log(event.keyCode);
+    });
+
+    $(document).keyup(function(event){
+        console.log(event.keyCode);
+    });
+
+    $('#textfield').keydown(function() {
+        alert('A key was pushed down!');
+    });
 
 
+// ========================================ADDING EFFECTS=========================================
+//  .hide()
+//  .show()
+//  .toggle()
+//  .fadeIn
+//  .fadeOut
+//  .fadeToggle
+//  .fadeIn
+//  .fadeOut
 
 
+    // Hide main heading
+    $("#hideHeading").click(function() {
+        $("h1").hide();
+    });
 
-//JQUERY NOTES=============================================================================
-//
-//
-//        // ##################################################
-//        // Adding an event listener to a single element with an id
-//            function onParagraphClick() {
-//                this.style.backgroundColor = 'yellow';
-//            }
-//
-//
-//        //Vanilla JS--->
-//        // var paragraph = document.getElementById('codeup');
-//        // paragraph.addEventListener('click', onParagraphClick);
-//        // // add an event listener with jquery
-//        // $('#codeup').click(onParagraphClick);
-//
-//
-//        // ##################################################
-//        // add an event listener to multiple elements
-//
-//        function handleParagraphClick(e) {
-//            var theElementThatWasClicked = this;
-//            theElementThatWasClicked.style.backgroundColor = 'yellow';
-//        }
-//
-//        // // Vanilla JS
-//        // var paragraphs = document.getElementsByTagName('p');
-//        // for (var i = 0; i < paragraphs.length; i++) {
-//        //     paragraphs[i].addEventListener('click', handleParagraphClick);
-//        // }
-//
-//        // jquery
-//        $('p').click(handleParagraphClick);
-//
-//        // ##################################################
-//
-//        $('h2').dblclick(function() {
-//            alert('You double clicked an h2!');
-//            var theElementThatWasClicked = this;
-//            theElementThatWasClicked.style.backgroundColor = 'yellow';
-//        })
-//
-//        // ##################################################
-//        // hover
-//
-//        // two callback functions, begin hovering, when we stop hovering
-//
-//        function startHover() {
-//            alert('you started hovering')
-//        }
-//
-//        function stopHover() {
-//            alert('you stopped hovering')
-//        }
-//
-//        $('h1').hover(startHover, stopHover);
-//
-//        // Summary
-//        // $(selector).click(eventHandlerFunction)
-//
+    // Show main heading
+    $("#showHeading").click(function() {
+        $("h1").show();
+    });
+
+    // Toggle main heading
+    $("#toggleHeading").click(function() {
+        $("h1").toggle();
+    });
+
+    // Fade in table
+    $("#fadeInTable").click(function() {
+        $("table").fadeIn();
+    });
+
+    // Fade out table
+    $("#fadeOutTable").click(function() {
+        $("table").fadeOut();
+    });
+
+    // Fade toggle table
+    $("#fadeToggleRows").click(function() {
+        $("table").fadeToggle(2500);
+    });
+
+    // Slide up list
+    $("#slideUpList").click(function() {
+        $("ul").slideUp();
+    });
+
+    // Slide down list
+    $("#slideDownList").click(function() {
+        $("ul").slideDown();
+    });
 
 
+//   Slide toggle list over 400 milliseconds with linear easing,
+//   console logging fire for every step and a message when complete.
+
+            $("#slideToggleList").click(function() {
+                $("tbody").slideToggle({
+                    duration: 2000,
+                    easing: "linear",
+                    progress: function() {
+                        console.log("FIRE!");
+                    },
+                    complete: function() {
+                        console.log("That's all folks!");
+                    }
+
+                });
+            });
 
 </script>
 </body>
