--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -2,85 +2,265 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>jQuery_faq</title>
 </head>
 
 <!--<style>-->
     <!--.invisible {-->
         <!--display: none;-->
+        <!--color: transparent;-->
     <!--}-->
 <!--</style>-->
 
 <body>
-<h1 id="toggle">National Park Facts</h1>
-<dl>
-    <dt>Yellowstone National Park</dt>
-    <dd class="invisible">- black hot drink</dd>
+    <div>
+        <h1 id="x">Would you like to sign up for the newsletter? <span><sup>X</sup></span></h1>
+        <h2>Please register for the website</h2>
+    </div>
+
+
+    </dl>
+    <h1>Parks List</h1><h1 id="toggle">10 National Park Facts</h1>
+    <dl>
+        <dt>Fact #1</dt>
+        <dd class="invisible">- In the National Park System,
+            there are 407 sites covering more than 84 million acres of land.</dd>
+        <br>
+        <dt>Fact #2</dt>
+        <dd class="invisible">- The Appalachian Trail is a 2,185 mile long public
+            footpath that traverses the scenic, wooded, pastoral, wild, and culturally
+            resonant lands of the Appalachian Mountains.</dd>
+        <br>
+        <dt>Fact #3</dt>
+        <dd class="invisible">- In 2014, more than 290 million
+            people visited the National Parks.</dd>
+        <br>
+        <dt>Fact #4</dt>
+        <dd class="invisible">- The nation’s deepest cave is 1,593 ft deep in
+            New Mexico at Carlsbad Caverns National Park.</dd>
+        <br>
+        <dt>Fact #5</dt>
+        <dd class="invisible">- Originally established by Congress as Hot Springs Reservation in 1832
+            and later becoming a national park in 1921, Hot Springs National Park represents the oldest
+            protected area in the National Park System</dd>
+        <br>
+        <dt>Fact #6</dt>
+        <dd class="invisible">- In the National Park System there are: 124 historical parks or sites,
+            78 national monuments, 59 national parks, 25 battlefields or military parks, 18 preserves,
+            18 recreational areas, 10 seashores, 4 parkways, 4 lakeshores and 2 reserves.</dd>
+        <br>
+        <dt>Fact #7</dt>
+        <dd class="invisible">- Yosemite National Park supports more than 400 species of vertebrates
+            including fish, amphibians, reptiles, birds, and mammals.</dd>
+        <br>
+        <dt>Fact #8</dt>
+        <dd class="invisible">- There is 1 active volcano, thousands of petrified trees,
+            and almost 300 waterfalls in Yellowstone National Park.</dd>
+        <br>
+        <dt>Fact #9</dt>
+        <dd class="invisible">- Seneca Falls National Park in New York is the location of the First Women’s
+            Right Conventions, where expanding rights of women were discussed in the mid-19th century.</dd>
+        <br>
+        <dt>Fact #10</dt>
+        <dd class="invisible">- The largest living things in the world are in National Parks: Sequoia trees
+            and Alaskan brown bears (the world’s largest living carnivores).</dd>
+    </dl>
+    <hr>
     <br>
-    <dt>Yosemite</dt>
-    <dd class="invisible">- white cold drink</dd>
-    <br>
-    <dt>Grand Canyon</dt>
-    <dd class="invisible">- black hot drink</dd>
-    <br>
-    <dt>Acadia National Park</dt>
-    <dd class="invisible">- white cold drink</dd>
-    <br>
-    <dt>Zion National Park</dt>
-    <dd class="invisible">- black hot drink</dd>
-    <br>
-    <dt>Arches National Park</dt>
-    <dd class="invisible">- white cold drink</dd>
-    <br>
-    <dt>Glacier National Park</dt>
-    <dd class="invisible">- black hot drink</dd>
-    <br>
-    <dt>Sequoia National Park</dt>
-    <dd class="invisible">- white cold drink</dd>
-    <br>
-    <dt>Everglades National Park</dt>
-    <dd class="invisible">- black hot drink</dd>
-    <br>
-    <dt>Olympic National Park</dt>
-    <dd class="invisible">- white cold drink</dd>
-</dl>
+
+    <h3 id="fir">Sequoia National Park</h3>
+        <ul id="national-parks">
+            <li>See some of the largest and oldest living organisms on earth in parkland filled with trees, mountains, caves and beautiful views.</li>
+            <li>Along the lengthy and scenic Little Five Lakes Trail you’ll see peaks over 12,000 feet (3,600 meters) tall. </li>
+            <li>In winter, snowshoe or cross-country ski on over 40 miles (60 kilometers) of marked trails.</li>
+            <li> Purchase tickets here to tour Crystal Cave, a 10,000-year-old formation carved by an underground river.</li>
+        </ul>
+
+
+    <h3 id="sec">Biscayne National Park</h3>
+        <ul id="state-parks-texas">
+            <li>the largest marine park in the national park system.</li>
+            <li>Biscayne National Park is an underwater park – fully 95% of the park is covered by water – so get ready to get wet if you’re planning a visit.</li>
+            <li>Biscayne National Park protects the northern-most portion of the Florida Reef. Learn more about the park’s coral reefs</li>
+            <li>Back in the 1930s, when Miami was still a sleepy Southern town, local folk began to build shacks in a shallow portion of Biscayne Bay just south of Key Biscayne.</li>
+        </ul>
+
+
+    <h3 id="thi">Yosemite National Park</h3>
+        <ul id="state-parks-texas">
+            <li>On October 1, 1890, President Benjamin Harrison signed legislation that created Yosemite National Park.</li>
+            <li>A particular threat to Yosemite’s natural beauty came from sheepherders who frequently set meadows ablaze to promote the growth of edible grasses for their grazing sheep.</li>
+            <li>In 1903, President Theodore Roosevelt traveled to California and requested that Muir take him camping for several days in Yosemite. </li>
+            <li>After visiting the 1928 Winter Olympics in Switzerland, Don Tressider, president of Yosemite’s concessioner, sought to bring the quadrennial sporting event to the park.</li>
+        </ul>
+    <button id="highLightBtn">click me</button>
+
 <script src="./js/jquery-2.2.4.js"></script>
 <script>
     $(document).ready(function() {
     "use strict";
 
+//Big T------------------------------------------------------------------------------>
+//
+//        $(".highlight-list").click(function(e) {
+//            e.preventDefault();
+//            $("#national-parks").children().last().css("background-color", "yellow");
+//            $("#state-parks-texas").children().last().css("background-color", "yellow");
+//        });
+//
+//
+//        $("#national-parks-heading").click(function(e) {
+//            e.preventDefault();
+//            $("#national-parks").children().css('font-weight', 'bold');
+//        });
+//
+//
+//        $("h3").last().click(function(e) {
+//            e.preventDefault();
+//            $("#state-parks-texas").children().css('font-weight', 'bold');
+//        });
+//
+//
+//        $("#national-parks").children().click(function(e) {
+//            e.preventDefault();
+//            $("#national-parks").children().first().css('color', 'blue');
+//        });
+//
+//
+//        $("#state-parks-texas").children().click(function(e) {
+//            e.preventDefault();
+//            $("#state-parks-texas").children().first().css('color', 'blue');
+//        });
 
-//code review-->
 
-//       $('#toggle').click(function(e) {
-//            $('dd').toggleClass('invisible');
-//        })
-     //or-->
-        $('#toggle').click(function(e) {
-            e.preventDefault();
-            $('dd').toggleClass('invisible');
+////Justin exercise review----------------------------------------------------------->
+//
+////1. Highlight last li of each ul element
+//
+//        var highLightBtn = $('#highlightBtn');
+//
+//        highLightBtn.click(function() {
+//          $('ul').each(function(index, element) {
+//              $(element).children().last().css('background-color', 'yellow');
+//          });
+//        });
+//
+//
+////2. Make h3 font bold on click
+//
+//        $('h3').click(function() {
+//            $(this).next().children().css('font-weight', 'bold');
+//        });
+//
+//
+////3. M
+//
+//        $('li').click(function() {
+//            $(this).parent().children().first().css('color', 'blue');
+//        });
+
+
+
+
+//jQuery EFFECTS EXERCISE=====================================================================>
+//
+//   1. At the top of the page, add a div with two elements, an h1 that reads
+//      "Would you like to sign up for our newsletter?" and a span that has
+//      an 'x' in it. When the 'x' is clicked, hide the entire div element.
+//
+// mycode
+//        $("#hide").click(function() {
+//            $("h1").hide();
+//        });
+//
+//or-->
+
+        $('span').click(function() {
+            $(this).parent().hide();
+        });
+
+//another way of writing this code by refactoring it into a function that can be called.
+
+
+        function hideTheParent() {
+            $(this).parent().hide();
+        }
+
+        $('span').click(hideTheParent);
+
+
+
+
+//   2. The uls next to each h3 that contain facts about each park should start out hidden,
+//      and when the corresponding h3 is clicked, the display of the ul should be toggled with a sliding effect.
+
+
+        $("ul").hide();
+        $("h3").click(function() {
+            $(this).next().slideToggle();
         });
 
 
-//makes dt's yellow-->
-        $('dt').click(function(e) {
-            $(e.target).css('background-color', 'yellow');
-        });
-
-        $('dd').click(function(e) {
-            $(e.target).css('border', '2px dashed red');
-        });
-
-        $('h1').click(function(e) {
-            $(e.target).css('color', 'grey');
-        });
+//   3. After the user has been on the page for 8 seconds,
+//      an h2 should fade in that asks the user to register for the site.
 
 
-    //$('class').css('display', 'none');
-    //$('dt').click()
+        $('h2').hide().delay(8000).fadeIn();
+
+
+//   4. As always, make sure you are adding, committing and pushing to Github.
 
 
 
+//======================================================>
+//     // Hide main heading
+//        $("#hideHeading").click(function() {
+//            $("h1").hide();
+//        });
+//
+//     // Show main heading
+//        $("#showHeading").click(function() {
+//            $("h1").show();
+//        });
+//
+//     // Toggle main heading
+//        $("#toggleHeading").click(function() {
+//            $("h1").toggle();
+//        });
+//
+//     // Fade in table
+//        $("#fadeInTable").click(function() {
+//            $("table").fadeIn();
+//        });
+//
+//     // Fade out table
+//        $("#fadeOutTable").click(function() {
+//            $("table").fadeOut();
+//        });
+//
+//     // Fade toggle table
+//        $("#fadeToggleRows").click(function() {
+//            $("table").fadeToggle(2500);
+//        });
+//
+//     // Slide up list
+//        $("#slideUpList").click(function() {
+//            $("ul").slideUp();
+//        });
+//
+//     // Slide down list
+//        $("#slideDownList").click(function() {
+//            $("ul").slideDown();
+//        });
+//
+//     $('dt').css('font-weight', 'bold');
+//
+//     // Hovering and changing that items color
+//          $('li').hover(function() {
+//            $(this).css('color', '#f00');
+//          }, function() {
+//            $(this).css('color', 'black');
+//          });
 
 
     });
